force-app/main/default/objects/IManage_Workspace_Provisioning__c/IManage_Workspace_Provisioning__c.object-meta.xml
<CustomObject>
    <label>iManage Workspace Provisioning</label>
    <nameField>
        <displayFormat>PROV-{000000}</displayFormat>
        <label>Provisioning Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Workspace Provisioning Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>