force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/Active_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Key__c</fullName>
    <externalId>true</externalId>
    <label>Active Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>