force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/Current_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Id__c</fullName>
    <label>Current Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>