force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/iManage_Library__c.field-meta.xml
<CustomField>
    <fullName>iManage_Library__c</fullName>
    <label>iManage Library</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>