force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/iManage_WS_Name__c.field-meta.xml
<CustomField>
    <fullName>iManage_WS_Name__c</fullName>
    <label>iManage Workspace Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>