force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/Pending_Folder_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Folder_Count__c</fullName>
    <label>Pending Folder Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>