force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/Skipped_Folders__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Folders__c</fullName>
    <label>Skipped Folders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>