force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Bootstrap</fullName><default>true</default><label>Bootstrap</label></value>
            <value><fullName>Folders</fullName><default>false</default><label>Folders</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>