force-app/main/default/objects/IManage_Workspace_Provisioning__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>